[gd_scene load_steps=4 format=3 uid="uid://b42sgw7y27qd8"]

[ext_resource type="FontFile" uid="uid://cv8de3kqqibqp" path="res://assets/Fonts/joystix/joystix monospace.otf" id="1_673tb"]
[ext_resource type="Script" path="res://score_screen.gd" id="1_hofqp"]
[ext_resource type="Texture2D" uid="uid://bbiqeprb5sbo6" path="res://assets/Backgrounds/AIgen2.jpg" id="2_lriws"]

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hofqp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lriws")
expand_mode = 1
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 305.0
offset_top = 80.0
offset_right = 841.0
offset_bottom = 502.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 421.0
offset_top = 122.0
offset_right = 743.0
offset_bottom = 175.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_673tb")
theme_override_font_sizes/font_size = 44
text = "YOU DIED."

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 211.0
offset_right = 771.0
offset_bottom = 264.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_673tb")
theme_override_font_sizes/font_size = 30
text = "score: 0"

[node name="Label3" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 393.0
offset_top = 275.0
offset_right = 795.0
offset_bottom = 328.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_673tb")
theme_override_font_sizes/font_size = 30
text = "New High score!"

[node name="SubmitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 526.0
offset_top = 418.0
offset_right = 614.0
offset_bottom = 449.0
text = "Submit"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 439.0
offset_top = 338.0
offset_right = 710.0
offset_bottom = 398.0
placeholder_text = "Enter your name"
alignment = 1

[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
